--- a/www/red-kind-red/src/styles.css
+++ b/www/red-kind-red/src/styles.css
@@ -3,10 +3,15 @@ html, body {
     font-family: 'Raleway', sans-serif 
 }
 
-img {
+/* Esto no rompe nada? Necesito quitarlo para que 
+el cropper del user-edit funcione */
+
+/* img {
     width: 100%;
     height: auto;
-}
+} */
+
+
 /* 
  @import "~bootstrap/dist/css/bootstrap.css" */
 html, body { height: 100%; }
@@ -17,14 +22,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mywindow-class {    
     background-color: black;
     display: flex;
-}
-
-/* Div que trae el modal por 
-defecto */
-.modal-content {   
-     /* es probable que en algunos 
-     momentos se rompa, vigilar */
-    background-color: black;     
 }
 
 .mymodal-backdrop {
@@ -58,5 +55,45 @@ defecto */
 /* Diseño modal -- end */
 
 
+/* Diseño modal-cropper -- start */
+
+.mywindow-class-cropper {    
+    background-color: black;
+    display: flex;    
+    margin: auto;
+}
+
+.mymodal-dialog-cropper {
+    margin: 0.1px auto;
+    padding: 3px;
+    max-width: 95vw;
+    max-height: 90wh;
+
+}
+
+.mymodal-dialog-cropper .modal-content {
+    background-color: black;
+    width: auto;
+    margin: auto auto auto auto;
+
+}
+
+@media (min-width: 576px){
+    .mymodal-dialog-cropper {
+        max-width: 95vw;
+        margin: 1.75rem auto;
+        max-width: 95vw;
+        max-height: 90wh;
+      }
+}
+
+.mymodal-backdrop-cropper {
+    background-color: #000;
+    
+}
+
+.mymodal-backdrop-cropper.show {
+    opacity: 1.4;
+}
 
 
